--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="cuadrado">
+            
+        </div>
+    <div class="circulo">
+           </div>
+    </div>
 </body>
 </html>
